squished bugs

--- a/main.css
+++ b/main.css
@@ -144,7 +144,7 @@ ol li {
 .author-tag {
 	color: #99999B;
 	font-size: x-small;
-	padding: 0px 20px;
+	padding: 0px 20px 20px 20px;
 }
 
 
